--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb4
+spring.datasource.username=root
+spring.datasource.password=alam4321
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
